Fixed font size on mobile displays

--- a/styles.css
+++ b/styles.css
@@ -115,16 +115,16 @@ body {
 
 .nav-text {
     position: absolute;
-    bottom: 5px;
-    right: 5px;
-    font-size: 18px;
+    bottom: 1vh;
+    right: 1vh;
+    font-size: 3vh;
 }
 
 .selected-label {
     position: absolute;
-    top: 5px;
-    left: 5px;
-    font-size: 12px;
+    top: 1vh;
+    left: 1vh;
+    font-size: 2vh;
     opacity: 0.7;
 }
 
@@ -186,11 +186,20 @@ body {
     #nav-box-container {
         gap: 2vh;
     }
+
     .nav-box {
         width: 16vh;
         height: 16vh;
         margin-top: 1vh;
         margin-bottom: 2vh;
+    }
+
+    .nav-text {
+        font-size: 2vh;
+    }
+
+    .selected-label {
+        font-size: 1.5vh;
     }
 
     .qr-code-copyright {
